parser.automaton
State 0:
file' -> . file [ # ]
-- On NEWLINE shift to state 1
-- On option(NEWLINE) shift to state 2
-- On file shift to state 96
-- On RETURN reduce production option(NEWLINE) -> 
-- On PRINT reduce production option(NEWLINE) -> 
-- On NOT reduce production option(NEWLINE) -> 
-- On MINUS reduce production option(NEWLINE) -> 
-- On LSQ reduce production option(NEWLINE) -> 
-- On LP reduce production option(NEWLINE) -> 
-- On IF reduce production option(NEWLINE) -> 
-- On IDENT reduce production option(NEWLINE) -> 
-- On FOR reduce production option(NEWLINE) -> 
-- On DEF reduce production option(NEWLINE) -> 
-- On CST reduce production option(NEWLINE) -> 

State 1:
option(NEWLINE) -> NEWLINE . [ RETURN PRINT NOT MINUS LSQ LP IF IDENT FOR DEF CST ]
-- On RETURN reduce production option(NEWLINE) -> NEWLINE 
-- On PRINT reduce production option(NEWLINE) -> NEWLINE 
-- On NOT reduce production option(NEWLINE) -> NEWLINE 
-- On MINUS reduce production option(NEWLINE) -> NEWLINE 
-- On LSQ reduce production option(NEWLINE) -> NEWLINE 
-- On LP reduce production option(NEWLINE) -> NEWLINE 
-- On IF reduce production option(NEWLINE) -> NEWLINE 
-- On IDENT reduce production option(NEWLINE) -> NEWLINE 
-- On FOR reduce production option(NEWLINE) -> NEWLINE 
-- On DEF reduce production option(NEWLINE) -> NEWLINE 
-- On CST reduce production option(NEWLINE) -> NEWLINE 

State 2:
file -> option(NEWLINE) . list(def) nonempty_list(stmt) EOF [ # ]
-- On DEF shift to state 3
-- On list(def) shift to state 91
-- On def shift to state 94
-- On RETURN reduce production list(def) -> 
-- On PRINT reduce production list(def) -> 
-- On NOT reduce production list(def) -> 
-- On MINUS reduce production list(def) -> 
-- On LSQ reduce production list(def) -> 
-- On LP reduce production list(def) -> 
-- On IF reduce production list(def) -> 
-- On IDENT reduce production list(def) -> 
-- On FOR reduce production list(def) -> 
-- On CST reduce production list(def) -> 

State 3:
def -> DEF . ident LP loption(separated_nonempty_list(COMMA,ident)) RP COLON suite [ RETURN PRINT NOT MINUS LSQ LP IF IDENT FOR DEF CST ]
-- On IDENT shift to state 4
-- On ident shift to state 5

State 4:
ident -> IDENT . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ LP IN EQUAL DIV COMMA COLON CMP AND ]
-- On TIMES reduce production ident -> IDENT 
-- On RSQ reduce production ident -> IDENT 
-- On RP reduce production ident -> IDENT 
-- On PLUS reduce production ident -> IDENT 
-- On OR reduce production ident -> IDENT 
-- On NEWLINE reduce production ident -> IDENT 
-- On MOD reduce production ident -> IDENT 
-- On MINUS reduce production ident -> IDENT 
-- On LSQ reduce production ident -> IDENT 
-- On LP reduce production ident -> IDENT 
-- On IN reduce production ident -> IDENT 
-- On EQUAL reduce production ident -> IDENT 
-- On DIV reduce production ident -> IDENT 
-- On COMMA reduce production ident -> IDENT 
-- On COLON reduce production ident -> IDENT 
-- On CMP reduce production ident -> IDENT 
-- On AND reduce production ident -> IDENT 

State 5:
def -> DEF ident . LP loption(separated_nonempty_list(COMMA,ident)) RP COLON suite [ RETURN PRINT NOT MINUS LSQ LP IF IDENT FOR DEF CST ]
-- On LP shift to state 6

State 6:
def -> DEF ident LP . loption(separated_nonempty_list(COMMA,ident)) RP COLON suite [ RETURN PRINT NOT MINUS LSQ LP IF IDENT FOR DEF CST ]
-- On IDENT shift to state 4
-- On separated_nonempty_list(COMMA,ident) shift to state 7
-- On loption(separated_nonempty_list(COMMA,ident)) shift to state 8
-- On ident shift to state 88
-- On RP reduce production loption(separated_nonempty_list(COMMA,ident)) -> 

State 7:
loption(separated_nonempty_list(COMMA,ident)) -> separated_nonempty_list(COMMA,ident) . [ RP ]
-- On RP reduce production loption(separated_nonempty_list(COMMA,ident)) -> separated_nonempty_list(COMMA,ident) 

State 8:
def -> DEF ident LP loption(separated_nonempty_list(COMMA,ident)) . RP COLON suite [ RETURN PRINT NOT MINUS LSQ LP IF IDENT FOR DEF CST ]
-- On RP shift to state 9

State 9:
def -> DEF ident LP loption(separated_nonempty_list(COMMA,ident)) RP . COLON suite [ RETURN PRINT NOT MINUS LSQ LP IF IDENT FOR DEF CST ]
-- On COLON shift to state 10

State 10:
def -> DEF ident LP loption(separated_nonempty_list(COMMA,ident)) RP COLON . suite [ RETURN PRINT NOT MINUS LSQ LP IF IDENT FOR DEF CST ]
-- On RETURN shift to state 11
-- On PRINT shift to state 51
-- On NOT shift to state 12
-- On NEWLINE shift to state 55
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On suite shift to state 87
-- On simple_stmt shift to state 64
-- On ident shift to state 66
-- On expr shift to state 69

State 11:
simple_stmt -> RETURN . expr [ NEWLINE ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 50

State 12:
expr -> NOT . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 49

State 13:
expr -> MINUS . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 48

State 14:
expr -> LSQ . loption(separated_nonempty_list(COMMA,expr)) RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On separated_nonempty_list(COMMA,expr) shift to state 19
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 46
-- On ident shift to state 17
-- On expr shift to state 22
-- On RSQ reduce production loption(separated_nonempty_list(COMMA,expr)) -> 

State 15:
expr -> LP . expr RP [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 44

State 16:
expr -> CST . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On TIMES reduce production expr -> CST 
-- On RSQ reduce production expr -> CST 
-- On RP reduce production expr -> CST 
-- On PLUS reduce production expr -> CST 
-- On OR reduce production expr -> CST 
-- On NEWLINE reduce production expr -> CST 
-- On MOD reduce production expr -> CST 
-- On MINUS reduce production expr -> CST 
-- On LSQ reduce production expr -> CST 
-- On DIV reduce production expr -> CST 
-- On COMMA reduce production expr -> CST 
-- On COLON reduce production expr -> CST 
-- On CMP reduce production expr -> CST 
-- On AND reduce production expr -> CST 

State 17:
expr -> ident . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> ident . LP loption(separated_nonempty_list(COMMA,expr)) RP [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On LP shift to state 18
-- On TIMES reduce production expr -> ident 
-- On RSQ reduce production expr -> ident 
-- On RP reduce production expr -> ident 
-- On PLUS reduce production expr -> ident 
-- On OR reduce production expr -> ident 
-- On NEWLINE reduce production expr -> ident 
-- On MOD reduce production expr -> ident 
-- On MINUS reduce production expr -> ident 
-- On LSQ reduce production expr -> ident 
-- On DIV reduce production expr -> ident 
-- On COMMA reduce production expr -> ident 
-- On COLON reduce production expr -> ident 
-- On CMP reduce production expr -> ident 
-- On AND reduce production expr -> ident 

State 18:
expr -> ident LP . loption(separated_nonempty_list(COMMA,expr)) RP [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On separated_nonempty_list(COMMA,expr) shift to state 19
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 20
-- On ident shift to state 17
-- On expr shift to state 22
-- On RP reduce production loption(separated_nonempty_list(COMMA,expr)) -> 

State 19:
loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) . [ RSQ RP ]
-- On RSQ reduce production loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) 
-- On RP reduce production loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) 

State 20:
expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) . RP [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On RP shift to state 21

State 21:
expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On TIMES reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On RSQ reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On RP reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On PLUS reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On OR reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On NEWLINE reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On MOD reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On MINUS reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On LSQ reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On DIV reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On COMMA reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On COLON reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On CMP reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 
-- On AND reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP 

State 22:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
separated_nonempty_list(COMMA,expr) -> expr . [ RSQ RP ]
separated_nonempty_list(COMMA,expr) -> expr . COMMA separated_nonempty_list(COMMA,expr) [ RSQ RP ]
-- On TIMES shift to state 23
-- On PLUS shift to state 28
-- On OR shift to state 34
-- On MOD shift to state 30
-- On MINUS shift to state 36
-- On LSQ shift to state 25
-- On DIV shift to state 32
-- On COMMA shift to state 42
-- On CMP shift to state 38
-- On AND shift to state 40
-- On RSQ reduce production separated_nonempty_list(COMMA,expr) -> expr 
-- On RP reduce production separated_nonempty_list(COMMA,expr) -> expr 

State 23:
expr -> expr TIMES . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 24

State 24:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr TIMES expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On LSQ shift to state 25
-- On TIMES reduce production expr -> expr TIMES expr 
-- On RSQ reduce production expr -> expr TIMES expr 
-- On RP reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On OR reduce production expr -> expr TIMES expr 
-- On NEWLINE reduce production expr -> expr TIMES expr 
-- On MOD reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On DIV reduce production expr -> expr TIMES expr 
-- On COMMA reduce production expr -> expr TIMES expr 
-- On COLON reduce production expr -> expr TIMES expr 
-- On CMP reduce production expr -> expr TIMES expr 
-- On AND reduce production expr -> expr TIMES expr 

State 25:
expr -> expr LSQ . expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 26

State 26:
expr -> expr . LSQ expr RSQ [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr LSQ expr . RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . AND expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . OR expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
-- On TIMES shift to state 23
-- On RSQ shift to state 27
-- On PLUS shift to state 28
-- On OR shift to state 34
-- On MOD shift to state 30
-- On MINUS shift to state 36
-- On LSQ shift to state 25
-- On DIV shift to state 32
-- On CMP shift to state 38
-- On AND shift to state 40

State 27:
expr -> expr LSQ expr RSQ . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On TIMES reduce production expr -> expr LSQ expr RSQ 
-- On RSQ reduce production expr -> expr LSQ expr RSQ 
-- On RP reduce production expr -> expr LSQ expr RSQ 
-- On PLUS reduce production expr -> expr LSQ expr RSQ 
-- On OR reduce production expr -> expr LSQ expr RSQ 
-- On NEWLINE reduce production expr -> expr LSQ expr RSQ 
-- On MOD reduce production expr -> expr LSQ expr RSQ 
-- On MINUS reduce production expr -> expr LSQ expr RSQ 
-- On LSQ reduce production expr -> expr LSQ expr RSQ 
-- On DIV reduce production expr -> expr LSQ expr RSQ 
-- On COMMA reduce production expr -> expr LSQ expr RSQ 
-- On COLON reduce production expr -> expr LSQ expr RSQ 
-- On CMP reduce production expr -> expr LSQ expr RSQ 
-- On AND reduce production expr -> expr LSQ expr RSQ 

State 28:
expr -> expr PLUS . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 29

State 29:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr PLUS expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On TIMES shift to state 23
-- On MOD shift to state 30
-- On LSQ shift to state 25
-- On DIV shift to state 32
-- On RSQ reduce production expr -> expr PLUS expr 
-- On RP reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On NEWLINE reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On COMMA reduce production expr -> expr PLUS expr 
-- On COLON reduce production expr -> expr PLUS expr 
-- On CMP reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 30:
expr -> expr MOD . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 31

State 31:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr MOD expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On LSQ shift to state 25
-- On TIMES reduce production expr -> expr MOD expr 
-- On RSQ reduce production expr -> expr MOD expr 
-- On RP reduce production expr -> expr MOD expr 
-- On PLUS reduce production expr -> expr MOD expr 
-- On OR reduce production expr -> expr MOD expr 
-- On NEWLINE reduce production expr -> expr MOD expr 
-- On MOD reduce production expr -> expr MOD expr 
-- On MINUS reduce production expr -> expr MOD expr 
-- On DIV reduce production expr -> expr MOD expr 
-- On COMMA reduce production expr -> expr MOD expr 
-- On COLON reduce production expr -> expr MOD expr 
-- On CMP reduce production expr -> expr MOD expr 
-- On AND reduce production expr -> expr MOD expr 

State 32:
expr -> expr DIV . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 33

State 33:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr DIV expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On LSQ shift to state 25
-- On TIMES reduce production expr -> expr DIV expr 
-- On RSQ reduce production expr -> expr DIV expr 
-- On RP reduce production expr -> expr DIV expr 
-- On PLUS reduce production expr -> expr DIV expr 
-- On OR reduce production expr -> expr DIV expr 
-- On NEWLINE reduce production expr -> expr DIV expr 
-- On MOD reduce production expr -> expr DIV expr 
-- On MINUS reduce production expr -> expr DIV expr 
-- On DIV reduce production expr -> expr DIV expr 
-- On COMMA reduce production expr -> expr DIV expr 
-- On COLON reduce production expr -> expr DIV expr 
-- On CMP reduce production expr -> expr DIV expr 
-- On AND reduce production expr -> expr DIV expr 

State 34:
expr -> expr OR . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 35

State 35:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr OR expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On TIMES shift to state 23
-- On PLUS shift to state 28
-- On MOD shift to state 30
-- On MINUS shift to state 36
-- On LSQ shift to state 25
-- On DIV shift to state 32
-- On CMP shift to state 38
-- On AND shift to state 40
-- On RSQ reduce production expr -> expr OR expr 
-- On RP reduce production expr -> expr OR expr 
-- On OR reduce production expr -> expr OR expr 
-- On NEWLINE reduce production expr -> expr OR expr 
-- On COMMA reduce production expr -> expr OR expr 
-- On COLON reduce production expr -> expr OR expr 

State 36:
expr -> expr MINUS . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 37

State 37:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr MINUS expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On TIMES shift to state 23
-- On MOD shift to state 30
-- On LSQ shift to state 25
-- On DIV shift to state 32
-- On RSQ reduce production expr -> expr MINUS expr 
-- On RP reduce production expr -> expr MINUS expr 
-- On PLUS reduce production expr -> expr MINUS expr 
-- On OR reduce production expr -> expr MINUS expr 
-- On NEWLINE reduce production expr -> expr MINUS expr 
-- On MINUS reduce production expr -> expr MINUS expr 
-- On COMMA reduce production expr -> expr MINUS expr 
-- On COLON reduce production expr -> expr MINUS expr 
-- On CMP reduce production expr -> expr MINUS expr 
-- On AND reduce production expr -> expr MINUS expr 

State 38:
expr -> expr CMP . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 39
